@@ -4459,7 +4459,7 @@ void debug_get_ioports(char *stats_buffer)
   								sprintf (&stats_buffer[index_buffer],"%s",buf_linea); index_buffer +=strlen(buf_linea);
 
   								int index_ioport;
-  								for (index_ioport=0;index_ioport<99;index_ioport++) {
+  								for (index_ioport=0;index_ioport<256;index_ioport++) {
   									//sprintf (buf_linea,"%02X : %02X \n",index_ioport,tbblue_registers[index_ioport]);
   									sprintf (buf_linea,"%02X : %02X \n",index_ioport,tbblue_get_value_port_register(index_ioport) );
   									sprintf (&stats_buffer[index_buffer],"%s",buf_linea);
